Fixed cell width on IE 7.

--- a/src/resources/forms/orbeon/builder/form-builder.css
+++ b/src/resources/forms/orbeon/builder/form-builder.css
@@ -354,7 +354,7 @@ a.xforms-help-image .fb-control-help { vertical-align: baseline; }
 .fb-grid-2-columns .fb-grid-td .fb-grid-content { width: 30.5em; *width: 29.8em }
 
 .fb-grid-3-columns .fb-grid-td { width: 33.3%; }
-.fb-grid-3-columns .fb-grid-td .fb-grid-content { width: 19.4em; *width: 19em }
+.fb-grid-3-columns .fb-grid-td .fb-grid-content { width: 19.4em; *width: 18.9em }
 
 .fb-grid-4-columns .fb-grid-td { width: 25%; }
 .fb-grid-4-columns .fb-grid-td .fb-grid-content { width: 13.8em; *width: 13.4em }
